Dots are now loaded from the server.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">WanderDots</string>
+    <string name="FindViewMainState">Dots</string>
+    <string name="FindViewAlternateState">Adventures</string>
 </resources>
